# homework4

./: CMakeLists.txt  package.xml
docs/: todo.txt
src/: min_img_node.cpp
